crates/server/tests/snapshots/render_fixtures__basic_styles.snap
---
source: crates/server/tests/render_fixtures.rs
expression: styles(& r.grid)
---
r00 blank x1
r01 [#222222 #fdfdfd ]" " [#222222 #fdfdfd B]"Hello" [#222222 #fdfdfd ]" " [#222222 #fdfdfd B]"glyph" [#222222 #fdfdfd ]"                                                                                        "
r02 blank x1
r03 [#222222 #fefefe ]" A paragraph with " [#222222 #fefefe B]"bold" [#222222 #fefefe ]", " [#222222 #fefefe I]"itali" [#222222 #fdfdfd I]"c" [#222222 #fdfdfd ]"," [#222222 #fefefe ]" " [#222222 #fefefe U]"underline" [#222222 #fefefe ]"," [#222222 #fdfdfd ]" " [#222222 #fdfdfd S]"struc" [#222222 #fdfefd S]"k" [#222222 #fdfefd ]" and a" [#222222 #fcfefd ]" " [#0066cc #fcfefd U L1]"link" [#222222 #fcfefd ]".                                       "
r04 blank x6
r05 [#222222 #fefefe ]"   " [#222222 #fdfdfd ]" • First item                                                                                    "
r06 [#222222 #fefefe ]"   " [#222222 #fdfdfd ]" • Second item with" [#222222 #fafdfd ]" " [#0066cc #fafdfd U L2]"another" [#0066cc #fafdfd ]" " [#0066cc #fafdfd U L2]"link" [#0066cc #fafdfd ]"                                                                 "
r07 blank x3
r08 [#222222 #fefefe ]" " [#eeeeee #989898 ]"──────────────────────────────────────────────────────────────────────────────────────────────────" [#222222 #fafdfd ]" "
r09 blank x1
r10 [#222222 #fefefe ]" " [#888888 #fefefe ]"Dim footer text                                                                                    "
r11 blank x1
r12 blank x1
r13 blank x1
r14 blank x1
r15 blank x1
r16 blank x1
r17 blank x1
r18 blank x1
r19 blank x1
r20 blank x1
r21 blank x1
r22 blank x1
r23 blank x1
r24 blank x1
r25 blank x1
r26 blank x1
r27 blank x1
r28 blank x1
r29 blank x1
