crates/server/tests/snapshots/render_fixtures__basic_text.snap
---
source: crates/server/tests/render_fixtures.rs
expression: r.grid.dump_text()
---

 Hello glyph

 A paragraph with bold, italic, underline, struck and a link.

    • First item
    • Second item with another link

 ──────────────────────────────────────────────────────────────────────────────────────────────────

 Dim footer text
