crates/server/tests/snapshots/render_fixtures__boxes_text.snap
---
source: crates/server/tests/render_fixtures.rs
expression: r.grid.dump_text()
---

 ┌────────────────────────────────────────────────────┐
 │ Card with a border and some text inside.           │
 └────────────────────────────────────────────────────┘

 ╭────────────────────────────────────────╮
 │ Rounded box                            │
 ╰────────────────────────────────────────╯

 ▄         ▄▖
   Button   ▐
 ▄▄▄▄▄▄▄▄▄▄▄▟
 ┌────┐
 │A  B│
 │    │
 └1──2┘
