crates/server/tests/snapshots/render_fixtures__form_styles.snap
---
source: crates/server/tests/render_fixtures.rs
expression: styles(& r.grid)
---
r00 blank x1
r01 [#222222 #ffffff ]" " [#000000 #ffffff ]"Name  " [#000000 #ffffff  L1]"[Ada______________]" [#000000 #ffffff ]"                                                                          "
r02 [#222222 #ffffff ]" " [#000000 #ffffff ]"Search  " [#000000 #ffffff  L2]"[type" [#000000 #ffffff ]" " [#000000 #ffffff  L2]"here" [#000000 #ffffff ]"         " [#000000 #ffffff  L2]"]" [#000000 #ffffff ]"                                                                       "
r03 blank x1
r04 [#222222 #ffffff ]" " [#000000 #ffffff  L3]"[" [#000000 #1763ea  L3]"x" [#000000 #ffffff  L3]"]" [#000000 #ffffff ]" Subscribe                                                                                      "
r05 blank x1
r06 [#222222 #ffffff ]" " [#000000 #ffffff  L4]"(•)" [#000000 #ffffff ]" One  " [#000000 #ffffff  L5]"(" [#000000 #ffffff ]" " [#000000 #ffffff  L5]")" [#000000 #ffffff ]" Two                                                                                   "
r07 blank x1
r08 [#222222 #ffffff ]"        " [#767676 #ffffff ]"┌───────────────────────────────┐                                                           "
r09 [#222222 #ffffff ]"        " [#767676 #ffffff ]"│" [#000000 #ffffff  L6]"first" [#000000 #ffffff ]" " [#000000 #ffffff  L6]"line" [#000000 #ffffff ]"                     " [#767676 #ffffff ]"│                                                           "
r10 [#222222 #ffffff ]" " [#000000 #ffffff ]"Notes  " [#767676 #ffffff ]"└───────────────────────────────┘                                                           "
r11 [#222222 #ffffff ]" " [#000000 #ffffff ]"Pick  " [#000000 #ffffff  L7]"[Beta" [#000000 #ffffff ]" " [#000000 #ffffff  L7]"▾]" [#000000 #ffffff ]"                                                                                     "
r12 blank x1
r13 [#222222 #ffffff ]"  " [#000000 #ffffff  L8]"S" [#000000 #ebebeb  L8]"ubmit" [#222222 #ffffff ]"                                                                                            "
r14 blank x1
r15 blank x1
r16 blank x1
r17 blank x1
r18 blank x1
r19 blank x1
r20 blank x1
r21 blank x1
r22 blank x1
r23 blank x1
r24 blank x1
r25 blank x1
r26 blank x1
r27 blank x1
r28 blank x1
r29 blank x1
