crates/server/tests/snapshots/render_fixtures__overlay_regions.snap
---
source: crates/server/tests/render_fixtures.rs
expression: stable(regions)
---
#1 Link [CellRect { x: 12, y: 5, w: 7, h: 1 }] Some("http://127.0.0.1:PORT/ok") "Confirm"
