crates/server/tests/snapshots/render_fixtures__unicode_styles.snap
---
source: crates/server/tests/render_fixtures.rs
expression: styles(& r.grid)
---
r00 [#222222 #ffffff ]" " [#000000 #ffffff ]"ASCII: abc                                                                                         "
r01 [#222222 #ffffff ]" " [#000000 #ffffff ]"CJK: 日本語の文章 中文 한국어                                                                      "
r02 [#222222 #ffffff ]" " [#000000 #ffffff ]"Emoji: 😀" [#222222 #fff098 ]" " [#000000 #ffffff ]"👍🏽 🇦🇹 👨\u{200d}👩\u{200d}👧                                                                                 "
r03 [#222222 #ffffff ]" " [#000000 #ffffff ]"Combining: e\u{301} n\u{303} ö                                                                                   "
r04 [#222222 #ffffff ]" " [#000000 #ffffff ]"Box: ┌──┐ │██│ └──┘                                                                                "
r05 blank x1
r06 blank x1
r07 blank x1
r08 blank x1
r09 blank x1
r10 blank x1
r11 blank x1
r12 blank x1
r13 blank x1
r14 blank x1
r15 blank x1
r16 blank x1
r17 blank x1
r18 blank x1
r19 blank x1
r20 blank x1
r21 blank x1
r22 blank x1
r23 blank x1
r24 blank x1
r25 blank x1
r26 blank x1
r27 blank x1
r28 blank x1
r29 blank x1
